<!--
  ~ Copyright 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
  <string name="app_name">Sensitive App Lock</string>

  <string name="setting_title">App lock</string>
  <string name="setting_summary">Lock apps to stop other people opening them</string>

  <string name="app_lock_switch">Use app lock</string>
  <string name="app_lock_switch_summary">Keep some apps locked with a PIN</string>
  <string name="protected_apps_category">My apps</string>

  <string name="legal_notice_summary">
    App lock only disables the user interface and the app may still run in the background, including sharing data (e.g. photos or files) with other apps. Furthermore, anyone installing a new app which shares an account with a locked app may be automatically signed-in, potentially exposing your data in the vehicle.
  </string>

  <string name="validate_pin_title">Enter your PIN</string>
  <string name="create_pin_title">Create a PIN for locked apps</string>
  <string name="create_pin_subtitle">PIN must be at least 4 digits</string>
  <string name="confirm_pin_title">Confirm your PIN</string>
  <string name="confirm_pin_subtitle">Enter your PIN again</string>

  <string name="suspend_dialog_title">%1$s locked</string>
  <string name="suspend_dialog_message">Select <b>Unlock app</b> to enter your PIN, if you\'re ok with people in the car seeing your info</string>
  <string name="suspend_dialog_neutral_button_text">Unlock app</string>

  <string name="pin_error">Wrong PIN</string>

  <string name="pin_screen_next_button_label">Next</string>

  <string name="pin_screen_recovery_label">Forgot your PIN?</string>

  <!-- Digits on the PIN pad -->
  <string name="one">1</string>
  <string name="two">2</string>
  <string name="three">3</string>
  <string name="four">4</string>
  <string name="five">5</string>
  <string name="six">6</string>
  <string name="seven">7</string>
  <string name="eight">8</string>
  <string name="nine">9</string>
  <string name="zero">0</string>

  <string name="backspace_key_content_description">Backspace</string>
  <string name="confirm_key_content_description">Confirm</string>

  <!-- Sign In dialog -->
  <string name="signin_dialog_title">Make it easier to change your PIN</string>
  <string name="signin_dialog_message">Sign in to your Google Account to securely change your PIN, if you forget it</string>
  <string name="signin_dialog_neutral_button_text">No thanks</string>
  <string name="signin_dialog_positive_button_text">Sign in</string>

  <!-- Pin Reset Dialog -->
  <string name="reset_dialog_title">Forgot your PIN?</string>
  <string name="reset_dialog_message">To change your PIN and help keep your information secure, you\'ll need to delete apps that you locked or the data in them</string>
  <string name="reset_dialog_neutral_button_text">Cancel</string>
  <string name="reset_dialog_positive_button_text">Next</string>

  <!-- Clear data Dialog -->
  <string name="clear_data_dialog_title">Delete data in your apps?</string>
  <string name="clear_data_dialog_message">You\'ll delete data in %1$s, and %2$s</string>
  <string name="clear_data_dialog_single_app_message">You\'ll delete data in %1$s</string>
  <string name="clear_data_dialog_two_app_message">You\'ll delete data in %1$s and %2$s</string>
  <string name="clear_data_dialog_neutral_button_text">Cancel</string>
  <string name="clear_data_dialog_positive_button_text">Delete</string>

  <!-- Guest Users -->
  <string name="guest_user_exit_toast_message">App lock isn\'t available in guest profile.</string>

  <!-- Discovery Notification -->
  <string name="discovery_notification_title">Protect personal info with app lock</string>
  <string name="discovery_notification_message">Create a PIN to lock your apps</string>
  <string name="discovery_notification_setup_button_text">Get started</string>
  <string name="discovery_notification_dismiss_button_text">Not now</string>
  <string name="discovery_notification_permanent_dismiss_button_text">Don\'t show again</string>

</resources>
