<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2025 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.FrameLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--  Row 1  -->
        <TextView
            android:id="@+id/key_1"
            android:text="@string/one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/PinPadKey"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/key_2" />

        <TextView
            android:id="@+id/key_2"
            android:text="@string/two"
            app:layout_constraintStart_toEndOf="@id/key_1"
            app:layout_constraintTop_toTopOf="@id/key_1"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toStartOf="@+id/key_3"
            android:layout_marginStart="@dimen/pin_pad_col_spacing"
            android:layout_marginEnd="@dimen/pin_pad_col_spacing" />

        <TextView
            android:id="@+id/key_3"
            android:text="@string/three"
            app:layout_constraintStart_toEndOf="@id/key_2"
            app:layout_constraintTop_toTopOf="@id/key_1"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--  Row 2  -->
        <TextView
            android:id="@+id/key_4"
            android:text="@string/four"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/key_1"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toStartOf="@+id/key_5"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <TextView
            android:id="@+id/key_5"
            android:text="@string/five"
            app:layout_constraintStart_toEndOf="@id/key_4"
            app:layout_constraintTop_toTopOf="@id/key_4"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toStartOf="@+id/key_6"
            android:layout_marginStart="@dimen/pin_pad_col_spacing"
            android:layout_marginEnd="@dimen/pin_pad_col_spacing" />

        <TextView
            android:id="@+id/key_6"
            android:text="@string/six"
            app:layout_constraintStart_toEndOf="@id/key_5"
            app:layout_constraintTop_toTopOf="@id/key_4"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--  Row 3  -->
        <TextView
            android:id="@+id/key_7"
            android:text="@string/seven"
            app:layout_constraintTop_toBottomOf="@id/key_4"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toStartOf="@+id/key_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <TextView
            android:id="@+id/key_8"
            android:text="@string/eight"
            app:layout_constraintStart_toEndOf="@id/key_7"
            app:layout_constraintTop_toTopOf="@id/key_7"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toStartOf="@+id/key_9"
            android:layout_marginStart="@dimen/pin_pad_col_spacing"
            android:layout_marginEnd="@dimen/pin_pad_col_spacing" />

        <TextView
            android:id="@+id/key_9"
            android:text="@string/nine"
            app:layout_constraintStart_toEndOf="@id/key_8"
            app:layout_constraintTop_toTopOf="@id/key_7"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--  Row 4  -->
        <ImageButton
            android:id="@+id/key_backspace"
            android:src="@drawable/outline_backspace_24"
            android:contentDescription="@string/backspace_key_content_description"
            app:layout_constraintTop_toBottomOf="@id/key_7"
            style="@style/PinPadKey.ActionButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/key_0"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <TextView
            android:id="@+id/key_0"
            android:text="@string/zero"
            app:layout_constraintStart_toEndOf="@id/key_backspace"
            app:layout_constraintTop_toTopOf="@id/key_backspace"
            style="@style/PinPadKey"
            app:layout_constraintEnd_toStartOf="@+id/key_confirm"
            android:layout_marginStart="@dimen/pin_pad_col_spacing"
            android:layout_marginEnd="@dimen/pin_pad_col_spacing" />

        <ImageButton
            android:id="@+id/key_confirm"
            android:src="@drawable/outline_check_24"
            android:contentDescription="@string/confirm_key_content_description"
            app:layout_constraintStart_toEndOf="@id/key_0"
            app:layout_constraintTop_toTopOf="@id/key_backspace"
            style="@style/PinPadKey.ActionButton"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
